# dotfiles

./: .bash_profile  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmodules  .tmux.conf  .zshrc  README.md  Vagrantfile  audio.nix  backup.nix  configuration.nix  core.nix  de.nix  editor.nix  email.nix  flake.nix  gaming.nix  gulpfile.js  hardware.nix  hosts.nix  link.sh  misc.nix  network.nix  package.json  rss.nix  security.nix  shell.nix  terminal.nix  unlink.sh  user.nix  vcs.nix  web.nix
.config/.iterm2/: com.googlecode.iterm2.plist
.config/.st3/: CSScomb.sublime-settings  JSON.sublime-settings  PostCSS.sublime-settings  Pug.sublime-settings  dark-pastel (SL).tmTheme  trailing_spaces.sublime-settings
.config/beets/: config.yaml
.config/nvim/: init.vim
.config/sublime-text-3/: Package Control.sublime-settings  Shell-Unix-Generic.sublime-settings
.git-repo-template/hooks/: pre-push
.github/workflows/: check.yml
.st3/: BufferScroll.sublime-settings  Default (Linux).sublime-keymap  Emmet.sublime-settings  JavaScript.sublime-settings  PlainTasks.sublime-settings  Preferences.sublime-settings  phpcs.sublime-settings
__misc/csgo/: autoexec.cfg
cfg/: default.nix  efm.yaml  khard.conf
cfg/aerc/: aerc.conf
common/: backup.nix  config.nix  core.nix  default.nix  secrets.nix  snorlax.nix  user.nix
common/services/: bangin-server-node.nix  default.nix
config/: default.nix
etc/: config
etc/borgmatic/: config.yaml
etc/cron.d/: borgmatic
headful/: default.nix  editor.nix  terminal.nix  vcs.nix
home/: .asoundrc  .xinitrc  auth.nix  cli.nix  core.nix  default.nix  editor.nix  llm.nix  proxy.nix  shell.nix  terminal.nix  theme.nix  vcs.nix  virt.nix
home/.config/: user-dirs.dirs
home/.gnupg/: gpg-agent.conf
home/.ssh/: config
home/.xmonad/: build  xmonad.hs
home/proxy/: Caddyfile
home/scripts/: apps.sh  backup.sh  cabal-overwrite.sh  cpu-temps.sh  cruftwatch.sh  docker-status.sh  ds4-charge.sh  email-unread.sh  flatmarks-html-build.sh  flatmarks-work.sh  flatmarks.sh  import-sort-always-stdout.sh  import-sort-stdin.sh  mouse-charge.sh  pacfiles.sh  pass-git-credential.sh  passmenu.sh  poll-script.sh  printer-toner.sh  proton.sh  pypass.py  rss-unread.sh  sendkey.sh  updates.sh  w3m-urlopen.sh  wallpaper.sh  web-search.sh
home/snippets/: typescript.json
home/xmobar-samhh/: Main.hs  README.md  cabal.project  xmobar-samhh.cabal
home/xmonad-samhh/: .gitignore  Main.hs  README.md  cabal.project  xmonad-samhh.cabal
home/xmonad-samhh/bar/: Main.hs
home/xmonad-samhh/lib/: App.hs  Color.hs  Function.hs  Layout.hs  Spawn.hs  StatusBar.hs  String.hs  Workspace.hs  Workspaces.hs
home/xmonad-samhh/lib/Data/: Datum.hs
home/xmonad-samhh/lib/Data/Maybe/: Utils.hs
home/xmonad-samhh/src/: Main.hs
home/xmonad-samhh/wm/: Key.hs  Main.hs  StatusBar.hs  Window.hs  Workspace.hs
homelab/: backup.nix  default.nix  hardware.nix  network.nix  virt.nix
homelab/svc/: blocky.nix  default.nix  hass.nix  matterbridge.nix  mosquitto.nix  scrypted.nix  zigbee2mqtt.nix
hosts/: default.nix
hosts/alakazam/: audio.nix  auth.nix  backup.nix  core.nix  de.nix  default.nix  editor.nix  email.nix  gaming.nix  hardware.nix  hass.nix  misc.nix  network.nix  secrets.nix  security.nix  shell.nix  ssh.nix  terminal.nix  user.nix  vcs.nix  virt.nix  web.nix
hosts/alakazam/overseer/: cabal.project  flake.nix  overseer.cabal
hosts/alakazam/overseer/cli/: CLI.hs  Main.hs
hosts/alakazam/overseer/lib/Overseer/: Hardware.hs
hosts/alakazam/overseer/lib/Overseer/Hardware/: CPU.hs
hosts/lapras/: auth.nix  core.nix  default.nix  misc.nix  terminal.nix
hosts/tentacool/: backup.nix  containers.nix  core.nix  ddns.nix  default.nix  hardware.nix  hass.nix  http.nix  network.nix  secrets.nix  ssh.nix
lib/: builders.nix  default.nix
linux/home/: .Xmodmap  .Xresources  .tmux.conf  .xinitrc  .zshrc
macos/home/: .zshrc
misc/csgo/: autoexec.cfg
modules/: bangin.nix  config.nix  core.nix  default.nix  editor.nix  secrets.nix  security.nix  user.nix  vcs.nix
modules/cfg/: efm.yaml
modules/headful/: editor.nix  terminal.nix  vcs.nix
modules/nixos/: default.nix  secrets.nix  snorlax.nix
modules/programs/: default.nix  efm-langserver.nix  tshm.nix
modules/services/: bangin-server-node.nix
nixos/: config.nix  core.nix  default.nix  locale.nix  secrets.nix  snorlax.nix  user.nix
nixos/programs/: default.nix
patches/: aerc-no-perms-check.patch
pkg/: bangin-server-node.nix  bangin.nix  proton-ge.nix  tofi.nix  tshm.nix
pkg/bangup/: default.nix
pkgs/: bangin-server-node.nix  bangin.nix  corrupter.nix  default.nix  proton-ge.nix  qbpm.nix  tofi.nix  tshm.nix
pkgs/bangup/: bangup.sh
pkgs/fishPlugins/: default.nix  fish-minimal-theme.nix  z.nix
pkgs/vimPlugins/: default.nix  exrc-vim.nix  eyeliner-nvim.nix  nvim-surround.nix  (+1 more)
scripts/: apps.sh  backup.sh  browser-launch.sh  definition-lookup.sh  flatmarks-html-build.sh  flatmarks-work.sh  flatmarks.sh  get-rand-unsplash.sh  mouse-charge.sh  pass-git-credential.sh  pass-prefixed-line.sh  passmenu.sh  sendkey.nu  sendkey.sh  set-rand-wallpaper.sh  web-search.sh
secrets/: b2-env.age  ddns-token.age  gmail.age  irc-token.age  krabby.age  migadu.age  pihole-env.age  pihole-pass.age  ponyta.age  radarr-api-key.age  radarr-host.age  radicale-htpasswd.age  restic.age  secrets.nix  sonarr-api-key.age  sonarr-host.age  zwave-env.age
shared/: config.nix  core.nix  default.nix
templates/: default.nix
(+292 files in other folders)
