cabal-version:           2.2
version:                 0.0.0
name:                    xmonad-samhh
build-type:              Simple

common common
  default-language:      Haskell2010
  default-extensions:
    LambdaCase
  ghc-options:
    -Wall
  build-depends:
      base               ^>= 4.14
    , relude             ^>= 1.0
    , containers         ^>= 0.6
  mixins:                  base hiding (Prelude)
                         , relude (Relude as Prelude)

executable xmonad-samhh-wm
  import:                common
  hs-source-dirs:        wm/
  main-is:               Main.hs
  default-extensions:
    FlexibleContexts
  build-depends:
      xmonad-samhh
    , data-default       ^>= 0.7
    , X11                ^>= 1.9
    , xmonad             ^>= 0.15
    , xmonad-contrib     ^>= 0.16
  other-modules:
    Key
    Layout
    StatusBar
    Window
    Workspace

executable xmonad-samhh-bar
  import:                common
  hs-source-dirs:        bar/
  main-is:               Main.hs
  build-depends:
      xmonad-samhh
    , xmobar

library
  import:                common
  hs-source-dirs:        lib/
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
  build-depends:
      aeson              ^>= 1.5
    , xdg-basedir        ^>= 0.2
  exposed-modules:
    Color
    Data.Maybe.Utils
    Function
    Spawn
    String

