cabal-version:             2.2
name:                      overseer
version:                   0.0.0
build-type:                Simple

common common
  default-language:        Haskell2010
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    TupleSections
  ghc-options:
    -Wall
  build-depends:
      base                 ^>=4.15
    , relude               ^>=1.0
    , text                 ^>=1.2
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

executable os
  import:                  common
  hs-source-dirs:          cli/
  main-is:                 Main.hs
  build-depends:
      overseer
    , optparse-applicative ^>=0.16
  other-modules:
    CLI

library
  import:                  common
  hs-source-dirs:          lib/
  build-depends:
      aeson                ^>=2.0
    , process              ^>=1.6
  exposed-modules:
    Overseer.Hardware
    Overseer.Hardware.CPU
